PersistenceResult must always have statistics.